--- a/Append Item Field/app.json
+++ b/Append Item Field/app.json
@@ -3,8 +3,8 @@
   "name": "Append Item Field",
   "publisher": "Justin Chardonnay SSIT",
   "version": "1.0.0.0",
-  "brief": "",
-  "description": "",
+  "brief": "Adds field under 'Inventory'",
+  "description": "Test package for Sandbox Environment",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
