--- a/Items Page/app.json
+++ b/Items Page/app.json
@@ -2,14 +2,14 @@
   "id": "25d54f81-a722-4c59-96c0-20b5428b05a0",
   "name": "Items Page Changes",
   "publisher": "Justin Chardonnay SSIT",
-  "version": "1.3.4.0",
+  "version": "1.3.4.2",
   "brief": "Add changes to the Items Page",
   "description": "Appends different fields to the Items Page",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
   "url": "https://seesafeit.dk/",
-  "logo": "logo.png",
+  "logo": "SSITlogo.png",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
