--- a/Items Page/app.json
+++ b/Items Page/app.json
@@ -2,7 +2,7 @@
   "id": "25d54f81-a722-4c59-96c0-20b5428b05a0",
   "name": "Items Page Changes",
   "publisher": "Justin Chardonnay SSIT",
-  "version": "1.3.4.2",
+  "version": "1.3.4.5",
   "brief": "Add changes to the Items Page",
   "description": "Appends different fields to the Items Page",
   "privacyStatement": "",
@@ -27,6 +27,7 @@
   },
   "runtime": "13.0",
   "features": [
-    "NoImplicitWith"
+    "NoImplicitWith",
+    "TranslationFile"
   ]
 }
